turn the font-weight for unexisting wiki pages from bold back to normal.
Sat Mar  4 16:11:33 2006  Tim Janik  <timj@gtk.org>

        * web/style/beast-style.css: turn the font-weight for unexisting
        wiki pages from bold back to normal.

svn path=/trunk/; revision=3476

--- a/web/style/beast-style.css
+++ b/web/style/beast-style.css
@@ -177,3 +177,6 @@ h3.ChangeLog-title  { font-size:120%; color: #404040; }
 .php-file-browser .php-file-browser-file1 { background-color: #e8e8ff }
 .php-file-browser .php-file-browser-file2 { background-color: #f0f0ff }
 }
+
+/* wiki markup */
+.wiki .NotFound b { font-weight: normal; }
