--- a/ebeast/app.less
+++ b/ebeast/app.less
@@ -24,13 +24,26 @@ BrowserWindowDefaults		{ ; /* used by main.js */
 				  backgroundColor:          @theme-background; /* #rrggbb needed */
 				  defaultFontSize:          14;              /* int needed */
 				  defaultMonospaceFontSize: 13;              /* int needed */ }
-html                 		{ font-family: sans; height: 100%; width: 100%; }
-body				{ font: inherit; padding: 0; margin: 0; color: @theme-foreground;
-				  overflow: hidden; width: 100vw; height: 100vh;
+html                 		{ width: 100vw; height: 100vh; font-family: sans; }
+body				{ width: 100%; height: 100%; overflow: hidden; font: inherit;
+				  padding: 0; margin: 0; color: @theme-foreground;
 				  background-color: @theme-background;
 				  background-image: @panel-background-lg; }
 body.window-inactive 		{ color: fade(@theme-foreground, 80%); }
 *				{ box-sizing: border-box; text-overflow: ellipsis; }
+
+/* == Scrollbars == */
+::-webkit-scrollbar 		{ height: 5px; width: 5px; background: #000; }
+::-webkit-scrollbar-corner	{ background: rgba(0, 0, 0, 0); }
+::-webkit-scrollbar-track 	{ background-size: 2px 2px;
+				  background-image: linear-gradient(45deg,
+								    #111 0%, #444 50%,
+								    #333 50%, #aaa 100%); }
+::-webkit-scrollbar-thumb 	{ background: @glow-control; -webkit-border-radius: 0.1ex;
+				  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75); }
+::-webkit-scrollbar-thumb:window-inactive	{ background: #333;
+						  /* background: fade(@glow-control, 20%); */
+						  -webkit-box-shadow: none; }
 
 /* == Resets == */
 input, textarea, keygen, select,
