--- a/ebeast/app.less
+++ b/ebeast/app.less
@@ -3,7 +3,9 @@
 @theme-foreground: 		#ffffff;
 @theme-background: 		#505050;
 @theme-border-radius:		3px;
-@panel-background-lg:		linear-gradient(to bottom, lighten(@theme-background, 4%) 0%, darken(@theme-background, 4%) 100%);
+@panel-background-lg0:		lighten(@theme-background, 1%);
+@panel-background-lg1:		darken(@theme-background, 1%);
+@panel-background-lg:		linear-gradient(to bottom, @panel-background-lg0 0%, @panel-background-lg1 100%);
 @panel-background-border:	darken(@theme-background, 25%);
 @panel-background-light:	lighten(@theme-background, 9%);
 @panel-background-dark:		darken(@theme-background, 9%);
@@ -24,11 +26,17 @@ BrowserWindowDefaults		{ ; /* used by main.js */
 				  backgroundColor:          @theme-background; /* #rrggbb needed */
 				  defaultFontSize:          14;              /* int needed */
 				  defaultMonospaceFontSize: 13;              /* int needed */ }
-html                 		{ width: 100vw; height: 100vh; font-family: sans; }
+gradient-01			{ -im-convert: "-size 67x1080 -attenuate 0.2 +noise Uniform
+						gradient:@{panel-background-lg0}-@{panel-background-lg1}"; }
+.gradient-01-bg			{ background: url(gradient-01.png) center repeat-x; background-size: auto 100%; }
+html				{ width: 100vw; height: 100vh; font-family: sans; }
 body				{ width: 100%; height: 100%; overflow: hidden; font: inherit;
 				  padding: 0; margin: 0; color: @theme-foreground;
 				  background-color: @theme-background;
-				  background-image: @panel-background-lg; }
+				  /* gradient with banding */
+				  background-image: @panel-background-lg;
+				  /* gradient image with reduced banding */
+				  .gradient-01-bg; }
 body.window-inactive 		{ color: fade(@theme-foreground, 80%); }
 *				{ box-sizing: border-box; text-overflow: ellipsis; }
 
