EBEAST: integrate font-awesome 4.7.0.
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/app.less
+++ b/ebeast/app.less
@@ -1,5 +1,9 @@
-@import "assets/widgets.less";
-@import "assets/dialogs.less";
+@import 'assets/widgets.less';
+@import 'assets/dialogs.less';
+
+/* == FontAwesome == */
+@import 'node_modules/font-awesome/less/font-awesome.less';
+@fa-font-path:			'../node_modules/font-awesome/fonts/';
 
 /* == Settings == */
 @theme-foreground: 		#ffffff;
