EBEAST: provide @button-active-lg and @button-radius settings in app.less
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/app.less
+++ b/ebeast/app.less
@@ -19,11 +19,13 @@
 @button-light:   		#999999;
 @button-lg:      		linear-gradient(to bottom, #777777 0%, #707070 45%, #606060 55%, #555555 100%);
 @button-dark:    		#444444;
-@button-border:   		#555555;
+@button-radius:			@theme-border-radius;
+@button-border:   		#333333;
 @button-hover:			fade(#ffffff, 10%);
 @button-active:			fade(#000000, 20%);
 @button-active-fg:		#bbbbbb;
-@button-active-border:		#333333;
+@button-active-lg:     		linear-gradient(to bottom, #606060 0%, #707070 50%, #606060 100%);
+@button-active-border:		#555555;
 @glow-control:			#0080ff;
 @focus-outline:			1px solid @glow-control;
 
