EBEAST: vc/: avoid CSS rule duplicates from .vue files
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/vc/styles.less
+++ b/ebeast/vc/styles.less
@@ -1,14 +1,4 @@
 /* GNU LGPL v2.1+: http://www.gnu.org/licenses/lgpl.html */
 
-/* == Buttons Mixins == */
-.vc-buttonframe 		{ border: 1px solid @vc-button-border; }
-.vc-buttonshade 		{ background-image: @vc-button-lg;
-				  border-top: 1px solid @vc-button-light; border-left: 1px solid @vc-button-light;
-				  border-bottom: 1px solid @vc-button-dark; border-right: 1px solid @vc-button-dark; }
-.vc-buttonhover			{ box-shadow: inset 500px 500px @vc-button-hover; }
-.vc-buttonactive		{ box-shadow: inset 500px 500px @vc-button-active;
-				  background-image: @vc-button-active-lg;
-				  border-color: @vc-button-active-border; }
-
 /* == User Settings & Overrides == */
-@import 'variables.less';
+@import 'mixins.less';
