--- a/ebeast/vc/variables.less
+++ b/ebeast/vc/variables.less
@@ -1,5 +1,7 @@
 /* GNU LGPL v2.1+: http://www.gnu.org/licenses/lgpl.html */
 
+/* Only use variable declarations or mixin function declarations here */
+
 /* == Theme Settings == */
 @vc-theme-foreground: 		#ffffff;
 @vc-theme-background: 		#505050;
