EBEAST: app.less: move font-awesome into vc/styles.less and import it
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/vc/styles.less
+++ b/ebeast/vc/styles.less
@@ -1,4 +1,8 @@
 /* GNU LGPL v2.1+: http://www.gnu.org/licenses/lgpl.html */
 
+/* == FontAwesome == */
+@import        'node_modules/font-awesome/less/font-awesome.less';
+@fa-font-path: '../node_modules/font-awesome/fonts/';
+
 /* == User Settings & Overrides == */
 @import 'mixins.less';
