--- a/ebeast/app.less
+++ b/ebeast/app.less
@@ -1,35 +1,32 @@
 @import 'assets/widgets.less';
 @import 'assets/dialogs.less';
-
-/* == FontAwesome == */
-@import 'node_modules/font-awesome/less/font-awesome.less';
-@fa-font-path:			'../node_modules/font-awesome/fonts/';
+@import 'vc/styles.less';
 
 /* == Settings == */
-@theme-foreground: 		#ffffff;
-@theme-background: 		#505050;
-@theme-border-radius:		3px;
-@panel-background-lg0:		lighten(@theme-background, 1%);
-@panel-background-lg1:		darken(@theme-background, 1%);
-@panel-background-lg:		linear-gradient(to bottom, @panel-background-lg0 0%, @panel-background-lg1 100%);
-@panel-background-border:	darken(@theme-background, 25%);
-@panel-background-light:	lighten(@theme-background, 9%);
-@panel-background-dark:		darken(@theme-background, 9%);
-@toolbar-background:		#606060;
-@toolbar-background-lg:		linear-gradient(to bottom, #666666 0%, #5a5a5a 100%);
-@button-foreground:   		#dddddd;
-@button-light:   		#999999;
-@button-lg:      		linear-gradient(to bottom, #777777 0%, #707070 45%, #606060 55%, #555555 100%);
-@button-dark:    		#444444;
-@button-radius:			@theme-border-radius;
-@button-border:   		#333333;
-@button-hover:			fade(#ffffff, 10%);
-@button-active:			fade(#000000, 20%);
-@button-active-fg:		#bbbbbb;
-@button-active-lg:     		linear-gradient(to bottom, #606060 0%, #707070 50%, #606060 100%);
-@button-active-border:		#555555;
-@glow-control:			#0080ff;
-@focus-outline:			1px solid @glow-control;
+@theme-foreground:		@vc-theme-foreground;
+@theme-background:		@vc-theme-background;
+@theme-border-radius:		@vc-theme-border-radius;
+@panel-background-lg0:		@vc-panel-background-lg0;
+@panel-background-lg1:		@vc-panel-background-lg1;
+@panel-background-lg:		@vc-panel-background-lg;
+@panel-background-border:	@vc-panel-background-border;
+@panel-background-light:	@vc-panel-background-light;
+@panel-background-dark:		@vc-panel-background-dark;
+@toolbar-background:		@vc-toolbar-background;
+@toolbar-background-lg:		@vc-toolbar-background-lg;
+@button-foreground:		@vc-button-foreground;
+@button-light:			@vc-button-light;
+@button-lg:			@vc-button-lg;
+@button-dark:			@vc-button-dark;
+@button-radius:			@vc-button-radius;
+@button-border:			@vc-button-border;
+@button-hover:			@vc-button-hover;
+@button-active:			@vc-button-active;
+@button-active-fg:		@vc-button-active-fg;
+@button-active-lg:		@vc-button-active-lg;
+@button-active-border:		@vc-button-active-border;
+@glow-control:			@vc-glow-control;
+@focus-outline:			@vc-focus-outline;
 
 /* == Body Styles == */
 BrowserWindowDefaults		{ ; /* used by main.js */
