EBEAST: vc/modaldialog.vue: add modal dialog component
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/vc/mixins.less
+++ b/ebeast/vc/mixins.less
@@ -11,6 +11,7 @@
 .vc-buttonactive()		{ box-shadow: inset 500px 500px @vc-button-active;
 				  background-image: @vc-button-active-lg;
 				  border-color: @vc-button-active-border; }
+.vc-popup-box-shadow()		{ box-shadow: 0 2px 8px @vc-boxshadow-color; }
 
 /* == User Settings & Overrides == */
 @import 'variables.less';
