--- a/ebeast/vc/variables.less
+++ b/ebeast/vc/variables.less
@@ -27,3 +27,4 @@
 @vc-button-active-border:	#555555;
 @vc-glow-control:		#0080ff;
 @vc-focus-outline:		1px solid @vc-glow-control;
+@vc-boxshadow-color:		fade(#000000, 30%);
