--- a/ebeast/app.scss
+++ b/ebeast/app.scss
@@ -1,48 +1,47 @@
-@import 'vc/styles.less';
+@import 'vc/styles.scss';
 
 /* == Settings == */
-@theme-foreground:		@vc-theme-foreground;
-@theme-background:		@vc-theme-background;
-@theme-border-radius:		@vc-theme-border-radius;
-@panel-background-lg0:		@vc-panel-background-lg0;
-@panel-background-lg1:		@vc-panel-background-lg1;
-@panel-background-lg:		@vc-panel-background-lg;
-@panel-background-border:	@vc-panel-background-border;
-@panel-background-light:	@vc-panel-background-light;
-@panel-background-dark:		@vc-panel-background-dark;
-@toolbar-background:		@vc-toolbar-background;
-@toolbar-background-lg:		@vc-toolbar-background-lg;
-@button-foreground:		@vc-button-foreground;
-@button-light:			@vc-button-light;
-@button-lg:			@vc-button-lg;
-@button-dark:			@vc-button-dark;
-@button-radius:			@vc-button-radius;
-@button-border:			@vc-button-border;
-@button-hover:			@vc-button-hover;
-@button-active:			@vc-button-active;
-@button-active-fg:		@vc-button-active-fg;
-@button-active-lg:		@vc-button-active-lg;
-@button-active-border:		@vc-button-active-border;
-@glow-control:			@vc-glow-control;
-@focus-outline:			@vc-focus-outline;
+$theme-foreground:		$vc-theme-foreground;
+$theme-background:		$vc-theme-background;
+$theme-border-radius:		$vc-theme-border-radius;
+$panel-background-lg0:		$vc-panel-background-lg0;
+$panel-background-lg1:		$vc-panel-background-lg1;
+$panel-background-lg:		$vc-panel-background-lg;
+$panel-background-border:	$vc-panel-background-border;
+$panel-background-light:	$vc-panel-background-light;
+$panel-background-dark:		$vc-panel-background-dark;
+$toolbar-background:		$vc-toolbar-background;
+$toolbar-background-lg:		$vc-toolbar-background-lg;
+$button-foreground:		$vc-button-foreground;
+$button-light:			$vc-button-light;
+$button-lg:			$vc-button-lg;
+$button-dark:			$vc-button-dark;
+$button-radius:			$vc-button-radius;
+$button-border:			$vc-button-border;
+$button-hover:			$vc-button-hover;
+$button-active:			$vc-button-active;
+$button-active-fg:		$vc-button-active-fg;
+$button-active-lg:		$vc-button-active-lg;
+$button-active-border:		$vc-button-active-border;
+$glow-control:			$vc-glow-control;
+$focus-outline:			$vc-focus-outline;
 
 /* == Body Styles == */
 BrowserWindowDefaults		{ ; /* used by main.js */
-				  backgroundColor:          @theme-background; /* #rrggbb needed */
+				  backgroundColor:          $theme-background; /* #rrggbb needed */
 				  defaultFontSize:          14;              /* int needed */
 				  defaultMonospaceFontSize: 13;              /* int needed */ }
-gradient-01			{ -im-convert: "-size 67x1080 -attenuate 0.2 +noise Uniform
-						gradient:@{panel-background-lg0}-@{panel-background-lg1}"; }
-.gradient-01-bg			{ background-color: @theme-background;
+gradient-01	{ -im-convert: "-size 67x1080 -attenuate 0.2 +noise Uniform gradient:#{$panel-background-lg0}-#{$panel-background-lg1}"; }
+@mixin gradient-01-bg		{ background-color: $theme-background;
 				  /* gradient with banding */
-				  background-image: @panel-background-lg;
+				  background-image: $panel-background-lg;
 				  /* gradient image with reduced banding */
 				  background: url(gradient-01.png) center repeat-x; background-size: auto 100%; }
 html				{ width: 100vw; height: 100vh; font-family: sans; }
 body				{ width: 100%; height: 100%; overflow: hidden; font: inherit;
-				  padding: 0; margin: 0; color: @theme-foreground;
-				  .gradient-01-bg; }
-body.window-inactive 		{ color: fade(@theme-foreground, 80%); }
+				  padding: 0; margin: 0; color: $theme-foreground;
+				  @include gradient-01-bg; }
+body.window-inactive 		{ color: fade($theme-foreground, 80%); }
 *				{ box-sizing: border-box; text-overflow: ellipsis; }
 
 /* == Scrollbars == */
@@ -52,15 +51,15 @@ body.window-inactive 		{ color: fade(@theme-foreground, 80%); }
 				  background-image: linear-gradient(45deg,
 								    #111 0%, #444 50%,
 								    #333 50%, #aaa 100%); }
-::-webkit-scrollbar-thumb 	{ background: @glow-control; -webkit-border-radius: 0.1ex;
+::-webkit-scrollbar-thumb 	{ background: $glow-control; -webkit-border-radius: 0.1ex;
 				  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75); }
 ::-webkit-scrollbar-thumb:window-inactive	{ background: #333;
-						  /* background: fade(@glow-control, 20%); */
+						  /* background: fade($glow-control, 20%); */
 						  -webkit-box-shadow: none; }
 
 /* == Application Widgets == */
 .PlayControls			{ padding: 1em; margin: 1em;
-				  background-color: @toolbar-background; background-image: @toolbar-background-lg; }
+				  background-color: $toolbar-background; background-image: $toolbar-background-lg; }
 .StatusBar			{ text-align: left; background-color: #000; }
 .StatusBar .StatusField		{ padding-left: 1em; }
 
