EBEAST: vc/cssaux.scss: add hsv() helper function
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/vc/mixins.scss
+++ b/ebeast/vc/mixins.scss
@@ -1,5 +1,7 @@
 /* GNU LGPL v2.1+: http://www.gnu.org/licenses/lgpl.html */
 
+@import 'cssaux.scss';
+
 /* Only use variable declarations or mixin function declarations here */
 
 /* == Buttons Mixins == */
