EBEAST: piano-roll: start painting notes
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/vc/variables.scss
+++ b/ebeast/vc/variables.scss
@@ -57,6 +57,6 @@ $vc-piano-roll-black-border: 	#222222;		/* border around black piano key */
 $vc-piano-roll-key-font:     	bold 9px sans-serif;   	/* the '9px' part is dynamically resized */
 $vc-piano-roll-key-font-color:  #221111;
 $vc-piano-roll-note-font:      	normal 9px sans-serif; 	/* the '9px' part is dynamically resized */
-$vc-piano-roll-note-font-color:	#111111;
+$vc-piano-roll-note-font-color:	#88cc88;
 
 
