--- a/ebeast/vc/cssaux.scss
+++ b/ebeast/vc/cssaux.scss
@@ -1,6 +1,6 @@
-/* This Source Code Form is licensed MPL-2.0: http://mozilla.org/MPL/2.0 */
+// This Source Code Form is licensed MPL-2.0: http://mozilla.org/MPL/2.0
 
-/* HSV (HSB) to RGBA */
+// HSV (HSB) to RGBA
 @function hsv($hue, $satb, $value, $a: 1) {
   @if $satb == 0 {
     @return hsla($hue, 0, $value, $a)
