--- a/ebeast/vc/styles.scss
+++ b/ebeast/vc/styles.scss
@@ -1,5 +1,8 @@
 // This Source Code Form is licensed MPL-2.0: http://mozilla.org/MPL/2.0
 
+// == User Settings & Overrides ==
+@import '../variables.scss';
+
 // == Scss Helper Functions ==
 @import 'cssaux.scss';
 
