--- a/ebeast/app.scss
+++ b/ebeast/app.scss
@@ -47,17 +47,7 @@ body.window-inactive 		{ color: fade($theme-foreground, 80%); }
 *				{ box-sizing: border-box; text-overflow: ellipsis; }
 
 // == Scrollbars ==
-::-webkit-scrollbar 		{ height: 5px; width: 5px; background: #000; }
-::-webkit-scrollbar-corner	{ background: rgba(0, 0, 0, 0); }
-::-webkit-scrollbar-track 	{ background-size: 2px 2px;
-				  background-image: linear-gradient(45deg,
-								    #111 0%, #444 50%,
-								    #333 50%, #aaa 100%); }
-::-webkit-scrollbar-thumb 	{ background: $glow-control; -webkit-border-radius: 0.1ex;
-				  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75); }
-::-webkit-scrollbar-thumb:window-inactive	{ background: #333;
-						  // background: fade($glow-control, 20%);
-						  -webkit-box-shadow: none; }
+@import 'scrollbar.scss';
 
 // == Application Widgets ==
 .PlayControls			{ padding: 1em; margin: 1em;
