EBEAST: scrollbar.scss: adjust sizes and backgrounds
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/scrollbar.scss
+++ b/ebeast/scrollbar.scss
@@ -1,16 +1,26 @@
 
 // == Scrollbar Settings ==
 $scrollbar-handle-base:		#707070;
+$webkit-scrollbar-size:		11px;
 
 // == Scrollbars ==
-::-webkit-scrollbar 		{ height: 5px; width: 5px; background: #000; }
-::-webkit-scrollbar-corner	{ background: rgba(0, 0, 0, 0); }
+::-webkit-scrollbar {
+  height: $webkit-scrollbar-size; width: $webkit-scrollbar-size;
+  background: $theme-background;
+  border-radius: 0; border: none;
+}
+::-webkit-scrollbar-corner {
+  background: $theme-background;
+}
 ::-webkit-scrollbar-track 	{ background-size: 2px 2px;
 				  background-image: linear-gradient(45deg,
 								    #111 0%, #444 50%,
 								    #333 50%, #aaa 100%); }
-::-webkit-scrollbar-thumb 	{ background: $glow-control; -webkit-border-radius: 0.1ex;
-				  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75); }
+::-webkit-scrollbar-thumb {
+  background: $scrollbar-handle-base;
+  -webkit-border-radius: 0.1ex;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
 ::-webkit-scrollbar-thumb:window-inactive	{ background: #333;
 						  // background: fade($glow-control, 20%);
 						  -webkit-box-shadow: none; }
