--- a/ebeast/scrollbar.scss
+++ b/ebeast/scrollbar.scss
@@ -3,6 +3,9 @@
 $webkit-scrollbar-size:		11px;
 $scrollbar-handle-base:		#707070;
 $scrollbar-background:		#333333;
+$scrollbar-track-border0:	#080808;
+$scrollbar-track-border1:	#111111;
+$scrollbar-shadow-rgba:		rgba(0, 0, 0, 0.25);
 
 // == Scrollbars ==
 ::-webkit-scrollbar {
@@ -13,12 +16,23 @@ $scrollbar-background:		#333333;
 ::-webkit-scrollbar-corner {
   background: $theme-background;
 }
+// track
 ::-webkit-scrollbar-track {
+  border: 1px solid; border-radius: 999px;
   background: $scrollbar-background;
+  box-shadow: 0 1px 1px 0 $scrollbar-shadow-rgba inset;
+  // box-shadows outside of -webkit-scrollbar are clipped, so we cannot draw a light edge
+  &:horizontal {
+    border-color: $scrollbar-track-border0 $scrollbar-track-border1 $scrollbar-track-border1 $scrollbar-track-border1;
+  }
+  &:vertical {
+    border-color: $scrollbar-track-border1 $scrollbar-track-border1 $scrollbar-track-border1 $scrollbar-track-border0;
+  }
 }
+// thumb
 ::-webkit-scrollbar-thumb {
+  border-radius: 999px;
   background: $scrollbar-handle-base;
-  -webkit-border-radius: 0.1ex;
   -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
 }
 ::-webkit-scrollbar-thumb:window-inactive	{ background: #333;
